<?xml version="1.0"?>
<package format="2">
  <name>where_am_i</name>
  <version>0.0.0</version>
  <description>The where_am_i package</description>
  
  <maintainer email="alpmercan89@gmail.com">alp</maintainer>
  <author email="alpmercan89@gmail.com">alp</author>

  <!-- Added license tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- Export Dependencies -->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
